# python-doit-api

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml
api_reference/: index.html
changelog/: index.html
ci_tools/: .pylintrc  generate-junit-badge.py  github_travis_rsa.enc  headers.tmpl  headers_check.py  requirements-pip.txt  run_tests.sh
docs/: api_reference.md  changelog.md  index.md  long_description.md
doit_api/: __init__.py  main.py
doit_api/tests/: conftest.py  test_task_and_taskgen.py
doit_api/tests/core/: test_config.py  test_pickling.py  test_task_and_taskgen.py
junit/: junit.xml  report.html
long_description/: index.html
search/: search_index.json
